// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton disabled matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n"
  data-focusable={true}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "MozTransitionProperty": "opacity",
      "MozUserSelect": "none",
      "WebkitAlignItems": "center",
      "WebkitBoxAlign": "center",
      "WebkitBoxDirection": "normal",
      "WebkitBoxFlex": 1,
      "WebkitBoxOrient": "vertical",
      "WebkitFlexBasis": "0%",
      "WebkitFlexDirection": "column",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "WebkitTransitionDuration": "0.15s",
      "WebkitTransitionProperty": "opacity",
      "WebkitUserSelect": "none",
      "alignItems": "center",
      "cursor": "pointer",
      "flexBasis": "0%",
      "flexDirection": "column",
      "flexGrow": 1,
      "flexShrink": 1,
      "msFlexAlign": "center",
      "msFlexDirection": "column",
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
      "msTouchAction": "manipulation",
      "msUserSelect": "none",
      "touchAction": "manipulation",
      "transitionDuration": "0.15s",
      "transitionProperty": "opacity",
      "userSelect": "none",
    }
  }
  tabIndex="0"
>
  <div
    className="css-view-1dbjc4n"
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitAlignItems": "center",
          "WebkitBoxAlign": "center",
          "WebkitBoxPack": "center",
          "WebkitJustifyContent": "center",
          "alignItems": "center",
          "backgroundColor": "rgba(0,0,0,1.00)",
          "borderBottomLeftRadius": "28px",
          "borderBottomRightRadius": "28px",
          "borderTopLeftRadius": "28px",
          "borderTopRightRadius": "28px",
          "height": "52px",
          "justifyContent": "center",
          "marginBottom": "7px",
          "marginLeft": "7px",
          "marginRight": "7px",
          "marginTop": "7px",
          "msFlexAlign": "center",
          "msFlexPack": "center",
          "width": "52px",
        }
      }
    >
      <div
        className="css-text-901oao"
        data-testid="iconIcon"
        dir="auto"
        style={
          Object {
            "backgroundColor": "rgba(0,0,0,0.00)",
            "color": "rgba(0,0,0,0.32)",
            "fontFamily": "MaterialIcons",
            "fontSize": "24px",
            "fontStyle": "normal",
            "fontWeight": "normal",
          }
        }
      >
        
      </div>
    </div>
  </div>
  <div
    className="css-text-901oao"
    dir="auto"
    style={
      Object {
        "color": "rgba(0,0,0,0.32)",
        "direction": "ltr",
        "fontFamily": "Roboto",
        "fontSize": "11px",
        "fontWeight": "normal",
        "lineHeight": "22px",
        "textAlign": "center",
        "textDecoration": "none",
        "textTransform": "none",
      }
    }
  >
    edit
  </div>
</div>
`;

exports[`IconButton enabled matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n"
  data-focusable={true}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "MozTransitionProperty": "opacity",
      "MozUserSelect": "none",
      "WebkitAlignItems": "center",
      "WebkitBoxAlign": "center",
      "WebkitBoxDirection": "normal",
      "WebkitBoxFlex": 1,
      "WebkitBoxOrient": "vertical",
      "WebkitFlexBasis": "0%",
      "WebkitFlexDirection": "column",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "WebkitTransitionDuration": "0.15s",
      "WebkitTransitionProperty": "opacity",
      "WebkitUserSelect": "none",
      "alignItems": "center",
      "cursor": "pointer",
      "flexBasis": "0%",
      "flexDirection": "column",
      "flexGrow": 1,
      "flexShrink": 1,
      "msFlexAlign": "center",
      "msFlexDirection": "column",
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
      "msTouchAction": "manipulation",
      "msUserSelect": "none",
      "touchAction": "manipulation",
      "transitionDuration": "0.15s",
      "transitionProperty": "opacity",
      "userSelect": "none",
    }
  }
  tabIndex="0"
>
  <div
    className="css-view-1dbjc4n"
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitAlignItems": "center",
          "WebkitBoxAlign": "center",
          "WebkitBoxPack": "center",
          "WebkitJustifyContent": "center",
          "alignItems": "center",
          "backgroundColor": "rgba(0,0,0,1.00)",
          "borderBottomLeftRadius": "28px",
          "borderBottomRightRadius": "28px",
          "borderTopLeftRadius": "28px",
          "borderTopRightRadius": "28px",
          "height": "52px",
          "justifyContent": "center",
          "marginBottom": "7px",
          "marginLeft": "7px",
          "marginRight": "7px",
          "marginTop": "7px",
          "msFlexAlign": "center",
          "msFlexPack": "center",
          "width": "52px",
        }
      }
    >
      <div
        className="css-text-901oao"
        data-testid="iconIcon"
        dir="auto"
        style={
          Object {
            "backgroundColor": "rgba(0,0,0,0.00)",
            "color": "rgba(40,44,52,1.00)",
            "fontFamily": "MaterialIcons",
            "fontSize": "24px",
            "fontStyle": "normal",
            "fontWeight": "normal",
          }
        }
      >
        
      </div>
    </div>
  </div>
  <div
    className="css-text-901oao"
    dir="auto"
    style={
      Object {
        "color": "inherit",
        "direction": "ltr",
        "fontFamily": "Roboto",
        "fontSize": "11px",
        "fontWeight": "normal",
        "lineHeight": "22px",
        "textAlign": "center",
        "textDecoration": "none",
        "textTransform": "none",
      }
    }
  >
    edit
  </div>
</div>
`;
